# Pandemonium-Math

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Common/headers/: math_consts.h
Include/: PandemoniumMath.h
Pandemonium-Mat/: README.md
Pandemonium-Mat/headers/: matrix.h  matrix4x4.h
Pandemonium-Mat/src/: matrix4x4.cpp
Pandemonium-Vec/: README.md
Pandemonium-Vec/headers/: vector.h  vector2.h  vector3.h
Pandemonium-Vec/old/: vec.cpp.old  vec.h.old
Pandemonium-Vec/src/: vector2.cpp  vector3.cpp
src/: main.cpp
